[package]
name = "nvoken"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Rust SDK for the nvoken durable agent runtime"

[dependencies]
async-stream = "0.3.6"
async-trait = "0.1.88"
anyhow = "1.0.104"
bytes = "1.10.1"
chrono = { version = "0.4.41", features = ["serde"] }
futures-core = "0.3.31"
futures-util = "0.3.31"
fastrand = "2.3.0"
hex = "0.4.3"
hmac = "0.12.1"
http = "1.3.1"
reqwest = { version = "0.13.4", features = ["json", "stream"] }
reqwest-middleware = { version = "0.5.2", features = ["json", "query"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_repr = "0.1.20"
sha2 = "0.10.9"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "time"] }
url = "2.5.4"
